--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="quantity_req">Quantity in Stock*</string>
     <string name="save_action">Save</string>
     <string name="sell">Sell</string>
+    <string name="share">Share</string>
     <string name="yes">Yes</string>
     <string name="required_fields">*required fields</string>
 </resources>
