--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="save_action">Save</string>
     <string name="sell">Sell</string>
     <string name="share">Share</string>
+    <string name="save">Save</string>
     <string name="yes">Yes</string>
     <string name="required_fields">*required fields</string>
 </resources>
